edited the index file

--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
         <li>anshuman of ds-1</li>
         <li>anshuman of ds-1</li>
     </ul>
+    <ol>
+        <li>adity</li>
+        <li>deval</li>
+        <li>anshuman</li>
+    </ol>
 </body>
 </html>
