--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Resume</title>
 </head>
 <body>
     <div>
         <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae laborum, rem doloremque illum laudantium eaque repellat rerum? Eveniet vel sint aut, quia numquam dolore alias quasi dolorem atque, doloremque molestiae.
+            
         </p>
     </div>
 </body>
